# gauge-field-analyze

./: .gitignore  Makefile.am  README.md  acinclude.m4  code-timing.ods  configure.ac  coulomb.nb  covariant-fit.nb  field.nb  gauge-transform.nb  gauge.nb  maxwell-lattice.nb  minres-test.nb  minres.m  minresqlp-test.nb  minresqlp.m  poisson-equation.nb  saddle-3.tex  saddle-lib-optimize.nb  saddle-lib-optimize.ods  saddle-lib-test.nb  saddle-steps.nb  schrott.tex  shift-run-execute.nb  shift-run-log.nb  strings.nb  test-sort.nb
include/: types.hpp
lib/: gauge_io.cc  gauge_io.h  qdp2mma.cc  qdp2mma.cpp  qdp2mma.h  qdp2mma.hpp  qdp_utilities.cc  qdp_utilities.h
matlab-lib/: minres1.m  minresqlp.m  minresqlpFull.m  minresqlp_example1.m  minresqlp_example2.m  minresqlp_example3.m  minresqlp_example4.m
mma-lib/: covariant-fit.m  field.m  gauge.m  groups.m  lattice.m  linear-algebra.m  matrix.m  maxwell-lattice.m  minres.m  minres1.m  minresqlp-full.m  minresqlp.m  minresqlp0.m  operators.m  plot.m  point-potential2.m  point-potential3.m  published-results.m  saddle-point-single.m  saddle-point.m  saddle-point.m-hold  teper-results.m  timing.m  trajectory.m  utils.m  value-error.m  wilson-coulomb.m  xml.m
programs/: gauge-analyze.cc  gauge-analyze.cpp  gauge-analyze.h
saddle-lib/: Makefile  README.md  cutoff.c  dynamic.c  eigensystem.c  fortran.h  linear.c  matrix.c  mmio.c  mmio.h  shifts.c  shifts.h  sort.c
trlan/: Makefile  link.nb  trlan-wrap.c
